# speedrun-kata

./: .gitignore  README.md
cpp/: .gitignore  CMakeLists.txt  speedrun-kata.sln  speedrun-kata.vcxproj
cpp/main/stage1/: Stage1.cpp  Stage1.hpp
cpp/main/stage2/: Stage2.cpp  Stage2.hpp
cpp/main/stage3/: Stage3.cpp  Stage3.hpp
cpp/main/stage4/: Stage4.cpp  Stage4.hpp
cpp/main/stage5/: Stage5.cpp  Stage5.hpp
cpp/test/: Stage1Test.cpp  Stage1Test.hpp  Stage2Test.cpp  Stage3Test.cpp  Stage4Test.cpp  Stage5Test.cpp  main.cpp
cpp/test/stage1/: Stage1Test.cpp  Stage1Test.hpp
csharp/: SpeedrunKata.sln
csharp/SpeedrunKata.Tests/: SpeedrunKata.Tests.csproj
csharp/SpeedrunKata.Tests/Properties/: AssemblyInfo.cs
csharp/SpeedrunKata.Tests/stage1/: TestStage1.cs
csharp/SpeedrunKata.Tests/stage2/: TestStage2.cs
csharp/SpeedrunKata.Tests/stage3/: TestStage3.cs
csharp/SpeedrunKata.Tests/stage4/: TestStage4.cs
csharp/SpeedrunKata.Tests/stage5/: TestStage5.cs
csharp/SpeedrunKata/stage1/: Stage1.cs
csharp/SpeedrunKata/stage2/: Stage2.cs
csharp/SpeedrunKata/stage3/: Stage3.cs
csharp/SpeedrunKata/stage4/: Stage4.cs
csharp/SpeedrunKata/stage5/: Stage5.cs
java/: .gitignore  build.gradle  pom.xml  settings.gradle
java/gradle/wrapper/: gradle-wrapper.properties
kotlin/: build.gradle
kotlin/gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/src/: main.rs
rust/src/org/: mod.rs
typescript/: .prettierrc  nvm.sh  package.json  run.sh  tsconfig.json
typescript/src/stage1/: Stage1.ts
typescript/src/stage2/: Stage2.java  Stage2.ts
typescript/src/stage3/: Stage3.java  Stage3.ts
typescript/src/stage4/: Stage4.java  Stage4.ts
typescript/src/stage5/: Stage5.java  Stage5.ts
typescript/test/stage1/: Stage1.test.ts
typescript/test/stage2/: Stage2.test.ts  Stage2Test.java
(+32 files in other folders)
