cmake_minimum_required(VERSION 3.14)
project(speedrun-kata)

set(CMAKE_CXX_STANDARD 17)
include(GoogleTest)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -Werror")
add_executable(stage1Test test/Stage1Test.cpp test/Stage1Test.hpp main/stage1/Stage1.cpp main/stage1/Stage1.hpp)
add_executable(stage2Test main/stage2/Stage2.cpp main/stage2/Stage2.hpp test/Stage2Test.cpp)
target_link_libraries( stage1Test  gtest)
target_link_libraries( stage2Test  gtest)
set(FooTestArgs --foo 1 --bar 2)
gtest_add_tests(stage1Test "" AUTO)
gtest_add_tests(stage2Test "${FooTestArgs}" AUTO)